[tool.poetry]
name = "escapeexplorer"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"